--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Proyecto-en-angular-star-wars-app"
+    }
+  },
+  "defaultProject": "Proyecto-en-angular-star-wars-app",
+  "cli": {
+    "analytics": "5f6a477a-5f2c-45ba-bb93-ca7215f03bdb"
+  }
 }
